# bevy_rosc

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic.rs  custom_osc_method.rs  plugin.rs  udp_server.rs
src/: lib.rs  osc_dispatcher.rs  osc_method.rs  osc_udp_client.rs  osc_udp_server.rs  plugin.rs
tests/: osc_dispatcher_test.rs
