[package]
name = "bevy_rosc"
version = "0.8.0"
edition = "2021"
description = "Send and receive OSC messages in bevy"
repository = "https://github.com/DrLuke/bevy_rosc"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "osc", "rosc"]
categories = ["network-programming"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [] }
rosc = { version = "0.10.1" }

[dev-dependencies]
bevy = { version = "0.15", features = [] }